# idba_ud

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  align.cpp  dba.cpp  extras.hpp  idba.mk  idba_ud.cpp  scaffold.cpp
assembly/: assembly_utility.cpp  assembly_utility.h  local_assembler.cpp  local_assembler.h
basic/: atomic_integer.h  bit_operation.h  functional.h  hash.h  histgram.h  kmer.h  math.cpp  math.h  pool.h
container/: hash_map.h  hash_set.h  hash_table.h  managed_list.h
graph/: bit_edges.h  contig_builder.h  contig_graph.cpp  contig_graph.h  contig_graph_branch_group.cpp  contig_graph_branch_group.h  contig_graph_path.h  contig_graph_vertex.h  contig_info.cpp  contig_info.h  hash_graph.cpp  hash_graph.h  hash_graph_branch_group.cpp  hash_graph_branch_group.h  scaffold_graph.cpp  scaffold_graph.h  scaffold_graph_path.h  scaffold_graph_vertex.h  vertex_status.h
misc/: hash_aligner.cpp  hash_aligner.h  log.cpp  log.h  options_description.cpp  options_description.h  utils.cpp  utils.h
sequence/: compact_sequence.cpp  compact_sequence.h  read_library.h  sequence.cpp  sequence.h  sequence_io.cpp  sequence_io.h  sequence_reader.cpp  sequence_reader.h  sequence_writer.cpp  sequence_writer.h  short_sequence.cpp  short_sequence.h
